--- a/bibliography.bib
+++ b/bibliography.bib
@@ -205,6 +205,21 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{DBLP:conf/acsos/Audrito20,
+  author       = {Giorgio Audrito},
+  title        = {{FCPP:} an efficient and extensible Field Calculus framework},
+  booktitle    = {{IEEE} International Conference on Autonomic Computing and Self-Organizing
+                  Systems, {ACSOS} 2020, Washington, DC, USA, August 17-21, 2020},
+  pages        = {153--159},
+  publisher    = {{IEEE}},
+  year         = {2020},
+  url          = {https://doi.org/10.1109/ACSOS49614.2020.00037},
+  doi          = {10.1109/ACSOS49614.2020.00037},
+  timestamp    = {Fri, 23 Oct 2020 15:37:58 +0200},
+  biburl       = {https://dblp.org/rec/conf/acsos/Audrito20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/jss/AudritoCDSV24,
   author       = {Giorgio Audrito and
                   Roberto Casadei and
